markup: EUID App UI board 페이지 중 새글 생성 페이지 마크업 및 validation
보드 새글 작성시 가장 먼저 나오는 활동 선택 페이지 마크업과 validtion 완료

Resolves

--- a/client/index.html
+++ b/client/index.html
@@ -70,8 +70,8 @@
             <div class="boardContainer">
               <span class="boardLabel">같이해요</span>
               <h3><a href="#">youtube 클론 프젝 같이 하실분~!</a></h3>
-              <p class="">
-                <span class="boardHuman" aria-hidden="true"></span>
+              <p class="boardPeople">
+                <span class="boardHumanSprite" aria-hidden="true"></span>
                 누구나 참여가능
               </p>
               <p>
